kustomize-app/overlays/gcp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  namespace: apache-test
spec:
  template:
    spec:
      containers:
      - name: apache
        image: centos/httpd-24-centos7
